--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "2.1.6",
   "homepage": "http://jquery.malsup.com/cycle2",
   "engines": {
-    "node": ">= 0.6.0"
+    "node": ">= 16"
   },
   "dependencies": {
     "jquery": ">=1.7"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.4.0",
-    "grunt-contrib-concat": "~0.1.3",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-watch": "~0.3.1"
+    "jshint": "^2.13.6",
+    "terser": "^5.29.2"
+  },
+  "scripts": {
+    "lint": "jshint src/*.js",
+    "build": "node scripts/build.js",
+    "test": "npm run lint"
   }
 }
